updated login page

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,24 @@ body {
 }
 
 
+@font-face {
+  font-family: "AmazonEmber";
+  src: url("/fonts/AmazonEmber-Regular.woff2") format("woff2"),
+       url("/fonts/AmazonEmber-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "AmazonEmber";
+  src: url("/fonts/AmazonEmber-Bold.woff2") format("woff2"),
+       url("/fonts/AmazonEmber-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+.font-amazonEmber {
+  font-family: "AmazonEmber", sans-serif;
+}
